# heel-gun

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  heel-gun.d.ts
.github/workflows/: rust.yml
resources/: example.json  example.yml
src/: config.rs  main.rs  outcome.rs  target.rs
