[package]
name = "heel-gun"
version = "0.1.0-pre.1"
publish = false
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.15"
tokio = "0.1.16"
hyper = "0.12.25"
rand = "0.6.5"
log = "0.4.6"
serde = { version = "1.0.89", features = ["serde_derive"] }
serde_json = "1.0.39"
env_logger = "0.6.1"
http = "0.1.16"
rand_pcg = "0.1.2"
futures = "0.1.25"
failure = "0.1.5"
serde_yaml = "0.8.8"
csv = "1.0.5"
