[package]
name = "heel-gun"
description = "A tool for testing an HTTP server's robustness to arbitrary requests"
repository = "https://github.com/Enet4/heel-gun"
version = "0.1.2-alpha.0"
edition = "2018"
readme = "README.md"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities", "network-programming"]
keywords = ["cli", "http", "async", "testing"]
exclude = ["resources/*", "heel-gun.d.ts"]

[badges]

[badges.travis-ci]
branch = "master"
repository = "Enet4/heel-gun"

[dependencies]
structopt = "0.2.15"
tokio = "0.1.16"
hyper = "0.12.25"
rand = "0.6.5"
log = "0.4.6"
serde = { version = "1.0.89", features = ["serde_derive"] }
serde_json = "1.0.39"
env_logger = "0.6.1"
http = "0.1.16"
rand_pcg = "0.1.2"
futures = "0.1.25"
failure = "0.1.5"
serde_yaml = "0.8.8"
csv = "1.0.5"
tokio-fs = "0.1.6"
itertools = "0.8.0"
tokio-io = "0.1.12"
